--- a/package.json
+++ b/package.json
@@ -1,42 +1,18 @@
 {
-<<<<<<< HEAD
-  "name": "video-test",
+  "name": "videochat",
   "version": "1.0.0",
-  "description": "",
+  "description": "webrtc app",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6",
     "express": "^4.17.3",
-    "socket.io": "^4.4.1",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
-=======
-  "name": "game_chat",
-  "version": "0.0.1",
-  "description": "A conference call implementation using WebRTC, Socket.io and Node.js.",
-  "main": "src/app.js",
-  "dependencies": {
-    "express": "^4.17.3",
-    "serve-favicon": "^2.5.0",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  },
-  "scripts": {
-    "start": "nodemon nodemon src/app.js"
-  },
-  "author": "Bob",
-  "license": "ISC"
- 
-
->>>>>>> 8ea288d (new updates)
+  }
 }
