--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game_chat",
   "version": "0.0.1",
   "description": "A conference call implementation using WebRTC, Socket.io and Node.js.",
-  "main": "src/app.js",
+  "main": "src/server.js",
   "dependencies": {
     "express": "^4.17.3",
     "serve-favicon": "^2.5.0",
@@ -12,7 +12,7 @@
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "start": "nodemon nodemon src/app.js"
+    "start": "node src/server.js"
   },
   "author": "Bob",
   "license": "ISC"
