--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "card_game",
   "main": "index.html",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "devstart": "nodemon server.js"
   },
   "author": "Bob Streeter",
   "license": "ISC",
