--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Bob Streeter",
   "license": "ISC",
+  "engines": { "node": "16.x"},
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.6.1"
