--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "author": "Bob Streeter",
   "license": "ISC",
-  "engines": { "node": "16.x"},
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
